Fix images not showing and header z-index

--- a/src/components/Ppage/styles.module.scss
+++ b/src/components/Ppage/styles.module.scss
@@ -32,6 +32,7 @@
 
   header {
     display: flex;
+    z-index: 2;
     width: 100%;
     padding: 32px;
     position: sticky;
